# ENG-ARB-quran-tafsir-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .wic-sanadset-discovery  .wic-supplemental-hadith-export.txt  DATA_NOTICE.md  Dockerfile  LICENSE  README.md  RESOURCES.md  WIC_EXPORT_TRIGGER.txt  WIC_EXPORT_TRIGGER_2.txt  compose.yaml  pyproject.toml  render.yaml
.github/: WIC_HADITH_EXPORT_TRIGGER_2.txt  WIC_HADITH_EXPORT_TRIGGER_3.txt
.github/scripts/: build_wic_accurate_hadith_package.py  build_wic_hadith_package.py  enrich_wic_hadith_sections.py
.github/workflows/: wic-hadith-accurate-export.yml  wic-hadith-package.yml  wic-local-export.yml  wic-sanadset-discovery.yml  wic-temp-hadith-json-export.yml
app/: __init__.py  catalog.py  config.py  content.py  database.py  main.py  models.py
catalog/: resources.json
dataset/: UPLOAD_DATASET_PARTS_HERE.txt  tafsir-data.sha256
examples/: browser.js
scripts/: build_dataset.py  prepare_data.py  validate_data.py
tests/: test_api.py
