[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "quran-tafsir-api"
version = "2.0.0"
description = "A multilingual FastAPI service for English and Arabic Quran tafsir resources."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Robin Zatacka" }]
dependencies = [
  "fastapi>=0.128,<1",
  "uvicorn[standard]>=0.48,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
